// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.participant.admin.v0;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Moving ACS from one participant to another
service ParticipantRepairService {
    // get contracts for a party
    rpc Download (DownloadRequest) returns (stream AcsSnapshotChunk);

    // upload contracts for a party
    rpc Upload (UploadRequest) returns (UploadResponse);
}

message DownloadRequest {
    repeated string parties = 1;
    string filter_domain_id = 2; // optional; exact match if set
    google.protobuf.Timestamp timestamp = 3; // optional; take acs state for this timestamp
    string protocol_version = 4; // optional; version of serialization to use
    // Size of the byte chunks to stream back.
    // Defaults to 2MB (half of the default gRPC max message size)
    google.protobuf.UInt32Value chunkSize = 5;
    bool gzip_format = 6;

}

message DownloadAcsSnapshotResponse {
    map <string, int64> domain_contract_count = 1;
    bytes acs_snapshot = 2;
}

message AcsSnapshotChunk {
  bytes chunk = 1; // a chunk of the acs snapshot download
}

message UploadRequest {
    bytes acs_snapshot = 1;
}

message UploadResponse {

}
